<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.session.AboutPartnerFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/about_partner_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextColor="@color/white"
        app:title="@string/session_fragment_toolbar_menu_about_partner">

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_partner_fragment_your_partner_public_key"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

            </TextView>

            <ImageView
                android:id="@+id/about_partner_fragment_partner_key_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_partner_fragment_full_version"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </TextView>

            <TextView
                android:id="@+id/about_partner_fragment_key_full_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>

</layout>